# assura-monorepo

./: ASSURA_NETWORK.md  readme.md
contracts/: foundry.toml  hardhat.config.ts  package.json  pnpm-lock.yaml  readme.md
contracts/contracts/: Counter.sol  Vault.sol
contracts/contracts/account/: NexusAccountDeployer.sol
contracts/contracts/assura/: AssuraVerifier.sol  IAssuraVerifier.sol  file-structure-readme.md
contracts/contracts/example/: Vault.t.sol
contracts/contracts/test/: BaseSepoliaTest.t.sol  Counter.t.sol  MockERC20.sol  TestConfig.sol  Vault.t.sol
contracts/ignition/modules/: AssuraVerifier.ts  Vault.ts
contracts/scripts/: deploy-all-networks.sh  deploy-vault-with-hooks.ts  get-tee-address.ts
contracts/test/: e2e-base-sepolia.ts  e2e-counter-comprehensive.ts  e2e-counter-old.ts  e2e-vault-base-sepolia.ts  e2e-vault-comprehensive.ts  e2e-vault-old.ts
frontend/: readme.md
sdk/: package-lock.json  package.json
tee/: .env.example  Dockerfile  compose.yaml  make-image-public.sh  package-lock.json  package.json  readme.md  rofl.yaml
tee/scrapper/: .env.example  addresses.json  github-pr.js  index.js  package-lock.json  package.json  scrapeXml.js
tee/src/: index.ts
tee/src/utils/: sanctions-checker.ts  score-calculator.ts  subname-manager.ts  tee-keys.ts  user-storage.ts  wallet.ts
tee/test/: .env.example  README.md  pyproject.toml  test_client.py  test_document.txt
ui/app/: components.json  locomotive-scroll.d.ts  next.config.ts  package.json  webpack-test-stub.js
ui/app/app/: globals.css  layout.tsx  (+1 more)
ui/landing-page/: package.json
(+42 files in other folders)
